fixed wrap issue in list

--- a/src/components/skills/skill-list.scss
+++ b/src/components/skills/skill-list.scss
@@ -5,6 +5,7 @@
 
   >li {
     list-style: none;
+    white-space: nowrap;
 
     .icon {
       color: $dusty-grey;
